Updated resume link to Google Drive and removed PDF file

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <p>Crafting efficient container solutions and streamlining deployment workflows</p>
             <div class="hero-buttons">
                 <a href="#projects" class="btn primary">View Projects</a>
-                <a href="nived.pdf" class="btn primary" download>
-                    <i class="fas fa-download"></i> Download Resume
+                <a href="https://drive.google.com/file/d/1jo2l2QJQsYuZsw6MrkXLLyQtTWQmIEPT/view?usp=sharing" class="btn primary" target="_blank">
+                    <i class="fas fa-download"></i> View Resume
                 </a>
                 <a href="#contact" class="btn secondary">Contact Me</a>
             </div>
