Removed personal information for privacy

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nived - Docker & DevOps Engineer | Expert in containerization, orchestration, and automated deployments">
-    <title>Nived - Docker & DevOps Engineer</title>
+    <meta name="description" content="Docker & DevOps Engineer | Expert in containerization, orchestration, and automated deployments">
+    <title>Docker & DevOps Engineer</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -48,15 +48,15 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Hi, I'm Nived</h1>
-            <h2>Docker & DevOps Engineer</h2>
-            <p>Crafting efficient container solutions and streamlining deployment workflows</p>
+            <h1>Docker & DevOps Engineer</h1>
+            <h2>Building Scalable Container Solutions</h2>
+            <p>Specialized in containerization, orchestration, and automated deployment workflows</p>
             <div class="hero-buttons">
                 <a href="#projects" class="btn primary">View Projects</a>
                 <a href="https://drive.google.com/file/d/1jo2l2QJQsYuZsw6MrkXLLyQtTWQmIEPT/view?usp=sharing" class="btn primary" target="_blank">
                     <i class="fas fa-download"></i> View Resume
                 </a>
-                <a href="#contact" class="btn secondary">Contact Me</a>
+                <a href="#contact" class="btn secondary">Contact</a>
             </div>
         </div>
     </section>
@@ -153,26 +153,22 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2>Let's Connect</h2>
+            <h2>Contact</h2>
             <div class="contact-info">
-                <a href="mailto:nivedmahendran547@gmail.com" class="contact-item">
-                    <i class="fas fa-envelope"></i>
-                    <span>nivedmahendran547@gmail.com</span>
+                <a href="https://github.com/nived2" class="contact-item" target="_blank">
+                    <i class="fab fa-github"></i>
+                    <span>GitHub Projects</span>
                 </a>
                 <a href="https://linkedin.com/in/nived-mahendran-a026941b2" class="contact-item" target="_blank">
                     <i class="fab fa-linkedin"></i>
                     <span>LinkedIn Profile</span>
-                </a>
-                <a href="https://github.com/nived2" class="contact-item" target="_blank">
-                    <i class="fab fa-github"></i>
-                    <span>GitHub Projects</span>
                 </a>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 Nived | Docker & DevOps Engineer</p>
+        <p>&copy; 2024 | Docker & DevOps Engineer</p>
     </footer>
 </body>
 </html>
