Updated contact information with Proton Mail address

--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
         <div class="container">
             <h2>Contact</h2>
             <div class="contact-info">
+                <a href="mailto:nivedmahendran@proton.me" class="contact-item">
+                    <i class="fas fa-envelope"></i>
+                    <span>Professional Email</span>
+                </a>
                 <a href="https://github.com/nived2" class="contact-item" target="_blank">
                     <i class="fab fa-github"></i>
                     <span>GitHub Projects</span>
